# CV_crawl

./: .cv-apply-project-selections.json  .cv-cl-checkpoint.json  .cv-cl-improvement-log.jsonl  .cv-cl-past-errors.jsonl  .gitignore  LESSONS.md  README.md  check_cv.py  patch_sp.py  pyproject.toml  render_cv.py  update_db.py  user_config.yaml  validate_bullets.py  write_sel.py  write_sel2.py
.claude/: CLAUDE.md  mcp.json
.claude/commands/: cv-apply.md  cv-setup.md  (+2 more)
agent/: __init__.py  config.py  cv_renderer.py  jd_parser.py  validators.py
cv-outputs/: applications_tracker.xlsx  ~$applications_tracker.xlsx
db/: schema.sql  setup_db.py
discovery/: __init__.py  config.yaml  config_writer.py  dedup.py  enrichment.py  run_search.py  scorer.py
logs/: api_usage.jsonl
profile/: scoring_profile.yaml  template_map.json  template_map_1page.json
reference_files/: readME.md
tools/: _build_selections.py  _cleanup_tmp.py  _patch_slot_plan.py  _patch_slot_plan2.py  _save_cache.py  backfill_descriptions.py  check_pdf_pages.py  clean_jd.py  compact_cv_bullets.py  coverage_plan.py  cv-bullets-happyrobot-4103.json  cv_apply_contract.py  cv_apply_runner.py  docx_to_pdf.py  enforce_one_page_cover_letter.py  evidence_select.py  extract_jd_keywords.py  fact_patch.py  job_url_ingest.py  load_cv_sources.py  query_jobs.py  reconcile_slot_plan_targets.py  refresh_discovery_state.py  render_cover_letter.py  render_cv_check_images.py  slot_plan.py  track_application.py  update_discovery_config.py  validate_cv_output.py  validate_redundancy.py  wrap_optimizer.py  write_cv_selections.py
(+7 files in other folders)
