[project]
name = "cv-crawl"
version = "0.1.0"
description = "Agentic CV intelligence and job discovery pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-jobspy>=1.1.0",
    "psycopg2-binary>=2.9.9",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "anthropic>=0.84.0",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "pdfplumber>=0.11.0",
    "docx2pdf>=0.1.8",
    "defusedxml>=0.7.1",
    "pymupdf>=1.27.2",
    "comtypes>=1.4.16",
    "pypdf>=6.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "discovery"]
